--- a/1.md
+++ b/1.md
@@ -1,4 +1,4 @@
 ## 
 推荐一个机场，速度不错，使用优惠码jisuyun可以体验一个月20G的免费套餐。
 其他套餐的价格也不贵，实际体验下来速度不错。
-注册地址https://xn--9kqu12djx2a.net/#/register?code=ZreZrCbq
+[注册地址](https://xn--9kqu12djx2a.net/#/register?code=ZreZrCbq)
